# pimidi

./: .gitignore  CODEX_OPTIMIZATIONS.md  CPPCHECK_TRACKING.md  FAQ.md  LIBRARY_ABI_POLICY.md  LIBRARY_API_BOUNDARY.md  LIBRARY_HEADER_INSTALL_PLAN.md  LIBRARY_REFACTOR.md  README.md  REVIEW_PASS.md
captures/: ac7cap  notworking  rtp-midi.cap  working-apple-to-apple
docker/debbuild/: Dockerfile  README.md  compose.yaml  run-debbuild.sh
docker/memcheck/: Dockerfile  compose.yaml  run-memcheck.sh
docker/rpmbuild/: Dockerfile  README.md  compose.yaml  run-rpmbuild.sh
net-midi/: README  acinclude.m4  bootstrap  configure.ac
net-midi/include/: midi_command.h  midi_journal.h  midi_note_packet.h  midi_payload.h  net_connection.h  rtp_packet.h
net-midi/src/: Makefile.am  cmd_end_handler.c  cmd_inv_handler.c  cmd_sync_handler.c  midi_command.c  midi_journal.c  midi_note_packet.c  midi_payload.c  net_applemidi.c  net_connection.c  net_listener.c  net_midi.c  parse_test.c  raveloxmidi.c  rtp_packet.c  utils.c
python/: broken_packet.py  control_send.py  new_drum.py  note_send.py  pc_send.py  realtimemsg.py  register.py  send100.py  send_list.py  send_quit.py  send_status.py  status_send.py  sysex.py  timing_clock_send.py  udp_client.py  udp_server.py
raveloxmidi/: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  README  acinclude.m4  autogen.sh  configure.ac  raveloxmidi.pc.in  raveloxmidi.service.in  raveloxmidi.spec.in  required
raveloxmidi/DEBIAN/: control-dev.in  control-lib.in  control.in  raveloxmidi-dev.control.in  raveloxmidi-dev.files  raveloxmidi-dev.files.in  raveloxmidi-lib.control.in  raveloxmidi-lib.files  raveloxmidi-lib.files.in  raveloxmidi-server.control.in  raveloxmidi-server.files  raveloxmidi-server.files.in
raveloxmidi/debian/: Makefile.am  control.in
raveloxmidi/debug/: debug.txt  valgrind.suppressions
raveloxmidi/docs/: CPPCHECK_TRACKING.md  LIBRARY_ABI_POLICY.md  LIBRARY_API_BOUNDARY.md  LIBRARY_REFACTOR.md  PUBLIC_API.md  REVIEW_PASS.md  STREAM_CLI.md
raveloxmidi/examples/: Makefile  README.md  midi_event_callback.c  minimal_sdk.c  send_note_and_stop.c  stream_named_pipes.sh
raveloxmidi/include/: Makefile.am  applemidi_by.h  applemidi_feedback.h  applemidi_inv.h  applemidi_ok.h  applemidi_sync.h  build_info.h.in  chapter_c.h  chapter_n.h  chapter_n_journal.h  chapter_p.h  cmd_end_handler.h  cmd_feedback_handler.h  cmd_inv_handler.h  cmd_sync_handler.h  daemon.h  data_context.h  data_queue.h  data_table.h  dbuffer.h  dns_service_discover.h  dns_service_discoverer.h  dns_service_publisher.h  dstring.h  kv_table.h  logging.h  midi_command.h  midi_control.h  midi_journal.h  midi_note.h  midi_note_packet.h  midi_payload.h  midi_program.h  midi_sender.h  midi_state.h  net_applemidi.h  net_connection.h  net_distribute.h  net_listener.h  net_response.h  (+9 more)
raveloxmidi/include/rvxmidi/: Makefile.am  rvxmidi.h
raveloxmidi/man/: Makefile.am  raveloxmidi-stream.1.in  raveloxmidi.1.in
raveloxmidi/pkgconfig/: Makefile.am  raveloxmidi.pc.in
raveloxmidi/pkgscripts/: branch_name  build_deb.in  build_number  validate_deb_contents  validate_rpm_contents
raveloxmidi/src/: Makefile.am  applemidi_by.c  applemidi_feedback.c  applemidi_inv.c  applemidi_ok.c  applemidi_responder.c  applemidi_sync.c  chapter_c.c  chapter_n.c  chapter_p.c  cmd_end_handler.c  cmd_feedback_handler.c  cmd_inv_handler.c  cmd_sync_handler.c  daemon.c  data_context.c  data_queue.c  data_table.c  dbuffer.c  dns_service_discover.c  dns_service_discoverer.c  dns_service_publisher.c  dstring.c  kv_table.c  logging.c  midi_command.c  midi_control.c  midi_journal.c  midi_note.c  midi_note_packet.c  midi_payload.c  midi_program.c  midi_sender.c  midi_state.c  net_applemidi.c  net_connection.c  net_distribute.c  net_listener.c  net_response.c  net_socket.c  (+14 more)
raveloxmidi/src/rvxmidi/: Makefile.am
raveloxmidi/tests/: Makefile.am  journal_test.c  sdk_lifecycle_test.c  timing_test.c
sfront/: Makefile  README  REBUILD  main_hello.c  net_crypto.c  net_globals.c  net_globals.changes  net_include.h  net_jrecv.c  net_jsend.c  net_local.h  net_rtcplib.c  net_rtplib.c  net_sfront.c  net_siplib.c
source/: Makefile  Makefile.am  cmd_end_handler.c  cmd_end_handler.h  cmd_inv_handler.h  cmd_sync_handler.h  configure.ac  midi_journal.c  midi_journal.h  midi_note_packet.c  midi_note_packet.h  midi_payload.c  midi_payload.h  midi_recv.c  midi_recv.h  net_applemidi.c  net_applemidi.h  net_connection.c  net_connection.h  net_listener.c  net_midi.c  parse_test.c  rtp_packet.c  rtp_packet.h  utils.c  utils.h
source/include/: midi_journal.h  midi_payload.h  net_applemidi.h  rtp_packet.h
source/src/: Makefile.am  cmd_inv_handler.c  midi_journal.c  midi_payload.c  net_listener.c  parse_test.c  utils.c
