AC_INIT()
AM_INIT_AUTOMAKE(net_midi, 0.0.1)
AC_CONFIG_HEADERS([config.h])

AM_MAINTAINER_MODE
AC_CANONICAL_HOST

AC_GNU_SOURCE
AC_PROG_LIBTOOL
AC_PROG_CC
AC_PROG_INSTALL

AC_SYS_LARGEFILE

AC_CONFIG_MACRO_DIR([m4])

ACX_PTHREAD([],[])
PKG_CHECK_MODULES(AVAHI, [avahi-client] )

AC_OUTPUT(Makefile src/Makefile)
