bin_PROGRAMS = net-midi

net_midi_SOURCES = \
	avahi_test.c \
	cmd_end_handler.c \
	cmd_inv_handler.c \
	cmd_sync_handler.c \
	midi_journal.c \
	midi_note_packet.c \
	midi_payload.c \
	net_applemidi.c \
	net_connection.c \
	net_listener.c \
	net_midi.c \
	parse_test.c \
	rtp_packet.c \
	utils.c 

net_midi_LDADD	= 

net_midi_LDFLAGS	= 

EXTRA_DIST = *.h

INCLUDES =
